# numeraire

./: .clang-format  .clang-tidy  .env.example  .gitignore  CMakeLists.txt  README.md  app_settings.py  config.json  db.sqlite3  dev.md  logger.py  main.py  requirements.txt
app/: dev_main.cpp  main.cpp
base/: settings.py  urls.py
bond_forge/: apps.py
cmake/: NumeraireCompileOptions.cmake  NumeraireDependencies.cmake
configs/: README.md  default.json  eur_euro_rates_par_curve.json  fred_usd_treasury_par_curve.json  option_universe_grid.json  simulation_exposure_grid.json
docs/: architecture.md  coding_style.md  development.md  mathematical_background.md  volatility_surface.md
integration_tests/: CMakeLists.txt  README.md
scripts/: build.sh  clean.sh  daily_book_mtm.sh  daily_dev_eod.sh  daily_market_prep.sh  fetch_fred_treasury_par_yields.py  format.sh  import_trade_bundle.py  load_static_par_curve.py  setup_macos.sh  test.sh  test_import_trade_bundle_validation.py
sql/: README.md  schema_v1.sql  seed_market_data_prep_scope.sql
src/database/: CMakeLists.txt  discount_curve_eod_builder.cpp  equity_daily_eod_lookup.cpp  historical_calibration_eod_read.cpp  index_daily_eod_lookup.cpp  leg_mtm_pnl.cpp  leg_pv.cpp  option_universe_eod_builder.cpp  option_universe_grid_config.cpp  par_curve_quote_loader.cpp  sqlite_discount_curve_eod_read.cpp  sqlite_discount_curve_repository.cpp  sqlite_historical_calibration_repository.cpp  sqlite_schema.cpp  sqlite_trade_leg_booking_repository.cpp  sqlite_trade_leg_exposure_repository.cpp  sqlite_trade_leg_mtm_repository.cpp  sqlite_trade_repository.cpp  sqlite_vol_surface_eod_read.cpp  sqlite_vol_surface_repository.cpp  trade_booking_rules.cpp  trade_lifecycle.cpp  underlying_daily_closes.cpp  vol_surface_eod_builder.cpp  vol_surface_quote_loader.cpp
src/market_data/: CMakeLists.txt  curved_rate_market_data.cpp  discount_curve_rate.cpp  sqlite_vol_surface_market_data.cpp  static_market_data_provider.cpp  vol_surface_interpolation.cpp
src/market_data_providers/: CMakeLists.txt  polygon_daily_eod_fetch.cpp  polygon_index_daily_eod_fetch.cpp  polygon_ingest_common.cpp  polygon_option_contract_fetch.cpp  polygon_option_daily_price_eod_fetch.cpp
src/pricers/: CMakeLists.txt  analytic_black_scholes_equity_pricer.cpp  analytic_composite_pricer.cpp  analytic_forward_pricer.cpp  pricer_factory.cpp
src/products/: CMakeLists.txt  equity_asset_or_nothing_product.cpp  equity_cash_or_nothing_product.cpp  equity_forward_product.cpp  product_factory.cpp  vanilla_equity_option_product.cpp
src/quant/: CMakeLists.txt  black_scholes_vanilla.cpp  cholesky.cpp  discount_curve_bootstrap.cpp  fixed_income_pricing.cpp  implied_vol_european.cpp  nearest_correlation.cpp
src/schedule/: CMakeLists.txt  date.cpp  format_iso_date.cpp  schedule_config_resolver.cpp  schedule_generator.cpp  schedule_quantlib.cpp
src/simulation/: CMakeLists.txt  exposure_grid_config.cpp  exposure_metrics.cpp  exposure_time_grid.cpp  gbm_evolution.cpp  gbm_spec.cpp  historical_calibration_eod_builder.cpp  historical_calibration_loader.cpp  historical_calibrator.cpp  historical_gbm_simulate.cpp  leg_path_pv_buffer.cpp  normal_random.cpp  path_pricer.cpp  path_pricing_rules.cpp  random_engine.cpp  scenario_buffer.cpp  scenario_dump.cpp  scenario_slice_market_data.cpp  simulation_module.cpp
src/utils/: CMakeLists.txt  config.cpp  database_path.cpp  env_loader.cpp  log_level.cpp  logger.cpp  quantlib_bridge.cpp  string.cpp
tests/: test_bonds.py
tool_kit/: config_loader.py  fundamentals.py  market_data_extractor.py  numerical_methods.py  plots.py  probability.py  (+2 more)
unit_tests/: CMakeLists.txt
unit_tests/core/: test_imarket_data.cpp  test_imodel.cpp  test_ipricer.cpp  test_iproduct.cpp  test_pricing_engine.cpp  test_pricing_result.cpp
unit_tests/database/: test_discount_curve_eod_builder.cpp  test_dtos.cpp  test_equity_daily_eod_lookup.cpp  test_equity_daily_eod_schema.cpp  test_historical_calibration_eod_read.cpp  test_historical_calibration_schema.cpp  test_index_daily_eod_schema.cpp  test_leg_mtm_pnl.cpp  test_leg_mtm_pnl_db.cpp  test_leg_pv.cpp  test_option_contract_schema.cpp  test_option_universe_eod_builder.cpp  test_sqlite_historical_calibration_repository.cpp  test_sqlite_trade_leg_booking_repository.cpp  test_sqlite_trade_leg_exposure_repository.cpp  test_sqlite_trade_leg_mtm_repository.cpp  test_sqlite_trade_repository.cpp  test_trade_booking_rules.cpp  test_trade_lifecycle.cpp  test_underlying_daily_closes.cpp  test_vol_surface_eod_builder.cpp  test_vol_surface_schema.cpp
unit_tests/market_data/: test_sqlite_vol_surface_market_data.cpp  test_static_market_data_provider.cpp  test_vol_surface_interpolation.cpp
unit_tests/pricers/: test_analytic_black_scholes_equity_pricer.cpp  test_analytic_composite_pricer.cpp  test_analytic_forward_pricer.cpp  test_pricer_factory.cpp
unit_tests/products/: test_product_factory.cpp
unit_tests/quant/: test_cholesky.cpp  test_discount_curve_bootstrap.cpp  test_fixed_income_pricing.cpp  test_implied_vol_european.cpp  test_nearest_correlation.cpp
unit_tests/schedule/: test_schedule_config_resolver.cpp  test_schedule_generator.cpp
unit_tests/simulation/: test_exposure_grid_config.cpp  test_exposure_metrics.cpp  test_exposure_time_grid.cpp  test_gbm_evolution.cpp  test_historical_calibrator.cpp  test_multi_factor_gbm_evolution.cpp  test_normal_random.cpp  test_path_pricing_rules.cpp  test_random_engine.cpp  test_scenario_buffer.cpp  test_scenario_dump.cpp  test_scenario_slice_market_data.cpp  test_simulation_module.cpp
unit_tests/utils/: test_config.cpp  test_env_loader.cpp  test_exception.cpp  test_log_level.cpp  test_logger.cpp  test_quantlib_bridge.cpp  test_string.cpp
viz/: README.md  pyproject.toml  requirements.txt
viz/notebooks/: discount_curve_eod.ipynb  gbm_calibration_scenarios.ipynb  vol_surface_eod.ipynb
viz/numeraire_viz/: __init__.py  db.py  discount_curve.py  historical_calibration.py  scenario_paths.py  vol_surface.py
viz/numeraire_viz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+158 files in other folders)
